Adiciona imagens de membros e altera descrição

--- a/sponsors.html
+++ b/sponsors.html
@@ -57,22 +57,22 @@
         <div class="bg-white p-6 rounded-xl shadow">
           <img src="images/apoiadores/OCALEV-Marca-01-1.png" alt="Ocalev Logo" class="h-24 object-contain mb-4 mx-auto">
           <h2 class="text-xl font-semibold text-wine">Ocalev Ltda</h2>
-          <p class="text-gray-600">Main Sponsor</p>
+          <p class="text-gray-600">Patrocinador</p>
         </div>
         <div class="bg-white p-6 rounded-xl shadow">
           <img src="images/apoiadores/Cloudx-logo-horizontal-2048x431.avif" alt="Ocalev Logo" class="h-24 object-contain mb-4 mx-auto">
           <h2 class="text-xl font-semibold text-wine">Cloudx</h2>
-          <p class="text-gray-600">Electronics Partner</p>
+          <p class="text-gray-600">Patrocinador</p>
         </div>
         <div class="bg-white p-6 rounded-xl shadow">
           <img src="images/apoiadores/Altium_Logo_BLK.png" alt="Ocalev Logo" class="h-24 object-contain mb-4 mx-auto">
           <h2 class="text-xl font-semibold text-wine">Altium</h2>
-          <p class="text-gray-600">Software Support</p>
+          <p class="text-gray-600">Software Provider</p>
         </div>
         <div class="bg-white p-6 rounded-xl shadow">
           <img src="images/apoiadores/solidworks_logo.png" alt="Ocalev Logo" class="h-24 object-contain mb-4 mx-auto">
           <h2 class="text-xl font-semibold text-wine">Solidworks</h2>
-          <p class="text-gray-600">Software Support</p>
+          <p class="text-gray-600">Software Provider</p>
         </div>
       </div>
 
@@ -119,17 +119,17 @@
         <div class="bg-white p-6 rounded-xl shadow">
           <img src="images/apoiadores/logo_ufpa.png" alt="UFPA Logo" class="h-24 object-contain mb-4 mx-auto">
           <h2 class="text-xl font-semibold text-wine">UFPA</h2>
-          <p class="text-gray-600">Main Sponsor</p>
+          <p class="text-gray-600">Universidade Federal do Pará</p>
         </div>
         <div class="bg-white p-6 rounded-xl shadow">
           <img src="images/apoiadores/itec-ufpa-logo.png" alt="ITEC Logo" class="h-24 object-contain mb-4 mx-auto">
           <h2 class="text-xl font-semibold text-wine">ITEC</h2>
-          <p class="text-gray-600">Electronics Partner</p>
+          <p class="text-gray-600">Instituto de Tecnologia</p>
         </div>
         <div class="bg-white p-6 rounded-xl shadow">
           <img src="images/apoiadores/PROEX.jpg" alt="PROEX Logo" class="h-24 object-contain mb-4 mx-auto">
           <h2 class="text-xl font-semibold text-wine">PROEX</h2>
-          <p class="text-gray-600">Software Support</p>
+          <p class="text-gray-600">Pró-Reitoria de Extensão</p>
         </div>
       </div>
 
@@ -156,9 +156,9 @@
           <a href="https://github.com/Robotech-UFPA" class="text-white hover:text-blue-700 mx-2">
               <i class="fab fa-linkedin-in"></i> GitHub
           </a>
-          <p>© 2025 <span class="font-semibold">Robotech UFPA</span>. Built by Dhomini. Powered by innovation.</p>
+          <p>© 2025 <span class="font-semibold">Robotech UFPA</span>. Built by Dhomini, Eduardo and Marcos. Powered by innovation.</p>
         </div>
     </footer>
-
+    
   </body>
 </html>
