--- a/team.html
+++ b/team.html
@@ -52,7 +52,6 @@
           <img src="images/team/miercio.jpeg" alt="Miercio Cardoso" class="w-32 h-32 mx-auto mb-4 rounded-full object-cover border-4 border-wine" />
           <h2 class="text-xl font-semibold text-wine">Prof. Dr. Miercio Cardoso</h2>
           <p class="text-gray-600">Orientador</p>
-          <p class="text-gray-500 text-sm mt-2">Professor e pesquisador em Engenharia Elétrica com foco em sistemas embarcados.</p>
           <div class="mt-3">
             <a href="https://linkedin.com/in/mierciocardoso" target="_blank" class="text-blue-600 hover:text-blue-800 inline-flex items-center gap-1">
               <svg class="w-5 h-5 fill-current" viewBox="0 0 24 24"><path d="M4.98 3.5C4.98 4.88 3.88 6 2.5 6S0 4.88 0 3.5 1.12 1 2.5 1 4.98 2.12 4.98 3.5zM0 24h5V8H0v16zm7.5 0h5V15c0-.83.67-1.5 1.5-1.5S15 14.17 15 15v9h5V14c0-2.76-2.24-5-5-5s-5 2.24-5 5v10z"/></svg>
@@ -60,13 +59,11 @@
             </a>
           </div>
         </div>
-
         <!-- Prof. Adalbery -->
         <div class="bg-white p-6 rounded-xl shadow text-center">
           <img src="images/team/adalbery.webp" alt="Adalbery Castro" class="w-32 h-32 mx-auto mb-4 rounded-full object-cover border-4 border-wine" />
           <h2 class="text-xl font-semibold text-wine">Prof. Dr. Adalbery Castro</h2>
           <p class="text-gray-600">Orientador</p>
-          <p class="text-gray-500 text-sm mt-2">Docente com experiência em robótica, automação e microcontroladores.</p>
           <div class="mt-3">
             <a href="https://linkedin.com/in/adalberycastro" target="_blank" class="text-blue-600 hover:text-blue-800 inline-flex items-center gap-1">
               <svg class="w-5 h-5 fill-current" viewBox="0 0 24 24"><path d="M4.98 3.5C4.98 4.88 3.88 6 2.5 6S0 4.88 0 3.5 1.12 1 2.5 1 4.98 2.12 4.98 3.5zM0 24h5V8H0v16zm7.5 0h5V15c0-.83.67-1.5 1.5-1.5S15 14.17 15 15v9h5V14c0-2.76-2.24-5-5-5s-5 2.24-5 5v10z"/></svg>
@@ -76,10 +73,8 @@
         </div>
       </div>
 
-      <!-- Grupos -->
-      <div class="mt-16 space-y-16">
 
-        <!-- Exemplo de grupo -->
+      <div class="mt-16 space-y-16">
         <div>
           <h2 class="text-4xl font-bold text-center text-wine mb-10">Eletrônica</h2>
           <div class="grid gap-8 md:grid-cols-3 justify-items-center">
@@ -87,34 +82,30 @@
               <img src="images/team/savio.jpeg" alt="Sávio Bastos" class="w-32 h-32 mx-auto mb-4 rounded-full object-cover border-4 border-wine" />
               <h2 class="text-xl font-semibold text-wine">Sávio Bastos</h2>
               <p class="text-gray-600">Team Leader</p>
-              <p class="text-gray-500 text-sm mt-2">Responsável pelo desenvolvimento eletrônico do robô. Apaixonado por circuitos e controle.</p>
               <a href="https://linkedin.com/in/saviobastos" class="text-blue-600 hover:text-blue-800 inline-flex items-center gap-1 mt-3" target="_blank">
                 <svg class="w-5 h-5 fill-current" viewBox="0 0 24 24"><path d="M4.98..."/></svg>
                 <span class="text-sm">LinkedIn</span>
               </a>
             </div>
+
             <div class="bg-white p-6 rounded-xl shadow text-center">
-              <img src="images/team/savio.jpeg" alt="Sávio Bastos" class="w-32 h-32 mx-auto mb-4 rounded-full object-cover border-4 border-wine" />
+              <img src="images/team/paulo.webp" alt="Sávio Bastos" class="w-32 h-32 mx-auto mb-4 rounded-full object-cover border-4 border-wine" />
               <h2 class="text-xl font-semibold text-wine">Paulo dos Anjos</h2>
               <p class="text-gray-600">Team Leader</p>
-              <p class="text-gray-500 text-sm mt-2">Responsável pelo desenvolvimento eletrônico do robô. Apaixonado por circuitos e controle.</p>
               <a href="https://linkedin.com/in/saviobastos" class="text-blue-600 hover:text-blue-800 inline-flex items-center gap-1 mt-3" target="_blank">
                 <svg class="w-5 h-5 fill-current" viewBox="0 0 24 24"><path d="M4.98..."/></svg>
                 <span class="text-sm">LinkedIn</span>
               </a>
             </div>
             <div class="bg-white p-6 rounded-xl shadow text-center">
-              <img src="images/team/savio.jpeg" alt="Sávio Bastos" class="w-32 h-32 mx-auto mb-4 rounded-full object-cover border-4 border-wine" />
+              <img src="images/team/mozart.webp" alt="Sávio Bastos" class="w-32 h-32 mx-auto mb-4 rounded-full object-cover border-4 border-wine" />
               <h2 class="text-xl font-semibold text-wine">Lucas Mozart</h2>
               <p class="text-gray-600">Team Leader</p>
-              <p class="text-gray-500 text-sm mt-2">Responsável pelo desenvolvimento eletrônico do robô. Apaixonado por circuitos e controle.</p>
               <a href="https://linkedin.com/in/saviobastos" class="text-blue-600 hover:text-blue-800 inline-flex items-center gap-1 mt-3" target="_blank">
                 <svg class="w-5 h-5 fill-current" viewBox="0 0 24 24"><path d="M4.98..."/></svg>
                 <span class="text-sm">LinkedIn</span>
               </a>
             </div>
-            <!-- Repita esse bloco para cada membro -->
-            <!-- ... -->
           </div>
         </div>
 
@@ -127,27 +118,24 @@
               <img src="images/team/gabriel.jpg" alt="Gabriel Barbosa" class="w-32 h-32 mx-auto mb-4 rounded-full object-cover border-4 border-wine" />
               <h2 class="text-xl font-semibold text-wine">Gabriel Barbosa</h2>
               <p class="text-gray-600">Team Leader</p>
-              <p class="text-gray-500 text-sm mt-2">Lidera o desenvolvimento mecânico, focado em eficiência estrutural e impressão 3D.</p>
               <a href="https://linkedin.com/in/gabrielbarbosa" class="text-blue-600 hover:text-blue-800 inline-flex items-center gap-1 mt-3" target="_blank">
                 <svg class="w-5 h-5 fill-current" viewBox="0 0 24 24"><path d="M4.98..."/></svg>
                 <span class="text-sm">LinkedIn</span>
               </a>
             </div>
             <div class="bg-white p-6 rounded-xl shadow text-center">
-              <img src="images/members/gabriel.jpg" alt="Gabriel Barbosa" class="w-32 h-32 mx-auto mb-4 rounded-full object-cover border-4 border-wine" />
+              <img src="images/members/gabriel.jpg" alt="Ana Mônica da Costa" class="w-32 h-32 mx-auto mb-4 rounded-full object-cover border-4 border-wine" />
               <h2 class="text-xl font-semibold text-wine">Ana Mônica da Costa</h2>
               <p class="text-gray-600">Team Leader</p>
-              <p class="text-gray-500 text-sm mt-2">Lidera o desenvolvimento mecânico, focado em eficiência estrutural e impressão 3D.</p>
               <a href="https://linkedin.com/in/gabrielbarbosa" class="text-blue-600 hover:text-blue-800 inline-flex items-center gap-1 mt-3" target="_blank">
                 <svg class="w-5 h-5 fill-current" viewBox="0 0 24 24"><path d="M4.98..."/></svg>
                 <span class="text-sm">LinkedIn</span>
               </a>
             </div>
             <div class="bg-white p-6 rounded-xl shadow text-center">
-              <img src="images/members/gabriel.jpg" alt="Gabriel Barbosa" class="w-32 h-32 mx-auto mb-4 rounded-full object-cover border-4 border-wine" />
+              <img src="images/members/gabriel.jpg" alt="Bernardo de Souza" class="w-32 h-32 mx-auto mb-4 rounded-full object-cover border-4 border-wine" />
               <h2 class="text-xl font-semibold text-wine">Bernardo de Souza</h2>
               <p class="text-gray-600">Team Leader</p>
-              <p class="text-gray-500 text-sm mt-2">Lidera o desenvolvimento mecânico, focado em eficiência estrutural e impressão 3D.</p>
               <a href="https://linkedin.com/in/gabrielbarbosa" class="text-blue-600 hover:text-blue-800 inline-flex items-center gap-1 mt-3" target="_blank">
                 <svg class="w-5 h-5 fill-current" viewBox="0 0 24 24"><path d="M4.98..."/></svg>
                 <span class="text-sm">LinkedIn</span>
@@ -161,45 +149,41 @@
         <div>
           <h2 class="text-4xl font-bold text-center text-wine mb-10">Programação</h2>
           <div class="grid gap-8 md:grid-cols-3 justify-items-center">
-            <!-- Dhomini Picanço -->
+
             <div class="bg-white p-6 rounded-xl shadow text-center">
               <img src="images/team/dhomini.jpg" alt="Dhomini Picanço" class="w-32 h-32 mx-auto mb-4 rounded-full object-cover border-4 border-wine" />
               <h2 class="text-xl font-semibold text-wine">Dhomini Picanço</h2>
               <p class="text-gray-600">Team Leader</p>
-              <p class="text-gray-500 text-sm mt-2">Especialista em sistemas embarcados e inteligência artificial embarcada.</p>
               <a href="https://linkedin.com/in/dhomini" class="text-blue-600 hover:text-blue-800 inline-flex items-center gap-1 mt-3" target="_blank">
                 <svg class="w-5 h-5 fill-current" viewBox="0 0 24 24"><path d="M4.98..."/></svg>
                 <span class="text-sm">LinkedIn</span>
               </a>
             </div>
-            <!-- Dhomini Picanço -->
+
             <div class="bg-white p-6 rounded-xl shadow text-center">
-              <img src="images/team/eduardo.jpeg" alt="Dhomini Picanço" class="w-32 h-32 mx-auto mb-4 rounded-full object-cover border-4 border-wine" />
+              <img src="images/team/eduardo.jpeg" alt="Eduardo da Silva" class="w-32 h-32 mx-auto mb-4 rounded-full object-cover border-4 border-wine" />
               <h2 class="text-xl font-semibold text-wine">Eduardo da Silva</h2>
               <p class="text-gray-600">Team Leader</p>
-              <p class="text-gray-500 text-sm mt-2">Especialista em sistemas embarcados e inteligência artificial embarcada.</p>
               <a href="https://linkedin.com/in/dhomini" class="text-blue-600 hover:text-blue-800 inline-flex items-center gap-1 mt-3" target="_blank">
                 <svg class="w-5 h-5 fill-current" viewBox="0 0 24 24"><path d="M4.98..."/></svg>
                 <span class="text-sm">LinkedIn</span>
               </a>
             </div>
-            <!-- Dhomini Picanço -->
+
             <div class="bg-white p-6 rounded-xl shadow text-center">
-              <img src="images/members/dhomini.jpg" alt="Dhomini Picanço" class="w-32 h-32 mx-auto mb-4 rounded-full object-cover border-4 border-wine" />
+              <img src="images/team/marcos.gif" alt="Marcos Corrêa" class="w-32 h-32 mx-auto mb-4 rounded-full object-cover border-4 border-wine" />
               <h2 class="text-xl font-semibold text-wine">Marcos Vinícus Corrêa</h2>
               <p class="text-gray-600">Team Leader</p>
-              <p class="text-gray-500 text-sm mt-2">Especialista em sistemas embarcados e inteligência artificial embarcada.</p>
               <a href="https://linkedin.com/in/dhomini" class="text-blue-600 hover:text-blue-800 inline-flex items-center gap-1 mt-3" target="_blank">
                 <svg class="w-5 h-5 fill-current" viewBox="0 0 24 24"><path d="M4.98..."/></svg>
                 <span class="text-sm">LinkedIn</span>
               </a>
             </div>
-            <!-- Dhomini Picanço -->
+
             <div class="bg-white p-6 rounded-xl shadow text-center">
-              <img src="images/team/jaisson.png" alt="Dhomini Picanço" class="w-32 h-32 mx-auto mb-4 rounded-full object-cover border-4 border-wine" />
+              <img src="images/team/jaisson.png" alt="Jaisson Penante" class="w-32 h-32 mx-auto mb-4 rounded-full object-cover border-4 border-wine" />
               <h2 class="text-xl font-semibold text-wine">Jaisson Penante</h2>
               <p class="text-gray-600">Team Leader</p>
-              <p class="text-gray-500 text-sm mt-2">Especialista em sistemas embarcados e inteligência artificial embarcada.</p>
               <a href="https://linkedin.com/in/dhomini" class="text-blue-600 hover:text-blue-800 inline-flex items-center gap-1 mt-3" target="_blank">
                 <svg class="w-5 h-5 fill-current" viewBox="0 0 24 24"><path d="M4.98..."/></svg>
                 <span class="text-sm">LinkedIn</span>
@@ -231,8 +215,9 @@
           <a href="https://github.com/Robotech-UFPA" class="text-white hover:text-blue-700 mx-2">
               <i class="fab fa-linkedin-in"></i> GitHub
           </a>
-          <p>© 2025 <span class="font-semibold">Robotech UFPA</span>. Built by Dhomini. Powered by innovation.</p>
+          <p>© 2025 <span class="font-semibold">Robotech UFPA</span>. Built by Dhomini, Eduardo and Marcos. Powered by innovation.</p>
         </div>
     </footer>
+    
   </body>
 </html>
