--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       <div class="absolute inset-0 bg-black/60"></div>
       <!-- Logo centered -->
       <div class="relative z-10 flex items-center justify-center h-full">
-        <img src="images/robotech.png" alt="Robotech Logo" class="w-64 md:w-80 drop-shadow-xl" />
+        <img src="images/robotech-2.png" alt="Robotech Logo" class="w-64 md:w-80 drop-shadow-xl" />
       </div>
     </section>
     
