Correção de descrição de membros

--- a/team.html
+++ b/team.html
@@ -81,7 +81,7 @@
             <div class="bg-white p-6 rounded-xl shadow text-center">
               <img src="images/team/savio.jpeg" alt="Sávio Bastos" class="w-32 h-32 mx-auto mb-4 rounded-full object-cover border-4 border-wine" />
               <h2 class="text-xl font-semibold text-wine">Sávio Bastos</h2>
-              <p class="text-gray-600">Team Leader</p>
+              <p class="text-gray-600">Líder da Robotech</p>
               <a href="https://linkedin.com/in/saviobastos" class="text-blue-600 hover:text-blue-800 inline-flex items-center gap-1 mt-3" target="_blank">
                 <svg class="w-5 h-5 fill-current" viewBox="0 0 24 24"><path d="M4.98..."/></svg>
                 <span class="text-sm">LinkedIn</span>
@@ -91,7 +91,7 @@
             <div class="bg-white p-6 rounded-xl shadow text-center">
               <img src="images/team/paulo.webp" alt="Sávio Bastos" class="w-32 h-32 mx-auto mb-4 rounded-full object-cover border-4 border-wine" />
               <h2 class="text-xl font-semibold text-wine">Paulo dos Anjos</h2>
-              <p class="text-gray-600">Team Leader</p>
+              <p class="text-gray-600">Líder de Eletrônica</p>
               <a href="https://linkedin.com/in/saviobastos" class="text-blue-600 hover:text-blue-800 inline-flex items-center gap-1 mt-3" target="_blank">
                 <svg class="w-5 h-5 fill-current" viewBox="0 0 24 24"><path d="M4.98..."/></svg>
                 <span class="text-sm">LinkedIn</span>
@@ -100,7 +100,6 @@
             <div class="bg-white p-6 rounded-xl shadow text-center">
               <img src="images/team/mozart.webp" alt="Sávio Bastos" class="w-32 h-32 mx-auto mb-4 rounded-full object-cover border-4 border-wine" />
               <h2 class="text-xl font-semibold text-wine">Lucas Mozart</h2>
-              <p class="text-gray-600">Team Leader</p>
               <a href="https://linkedin.com/in/saviobastos" class="text-blue-600 hover:text-blue-800 inline-flex items-center gap-1 mt-3" target="_blank">
                 <svg class="w-5 h-5 fill-current" viewBox="0 0 24 24"><path d="M4.98..."/></svg>
                 <span class="text-sm">LinkedIn</span>
@@ -117,7 +116,7 @@
             <div class="bg-white p-6 rounded-xl shadow text-center">
               <img src="images/team/gabriel.jpg" alt="Gabriel Barbosa" class="w-32 h-32 mx-auto mb-4 rounded-full object-cover border-4 border-wine" />
               <h2 class="text-xl font-semibold text-wine">Gabriel Barbosa</h2>
-              <p class="text-gray-600">Team Leader</p>
+              <p class="text-gray-600">Líder de Mecânica</p>
               <a href="https://linkedin.com/in/gabrielbarbosa" class="text-blue-600 hover:text-blue-800 inline-flex items-center gap-1 mt-3" target="_blank">
                 <svg class="w-5 h-5 fill-current" viewBox="0 0 24 24"><path d="M4.98..."/></svg>
                 <span class="text-sm">LinkedIn</span>
@@ -126,7 +125,6 @@
             <div class="bg-white p-6 rounded-xl shadow text-center">
               <img src="images/members/gabriel.jpg" alt="Ana Mônica da Costa" class="w-32 h-32 mx-auto mb-4 rounded-full object-cover border-4 border-wine" />
               <h2 class="text-xl font-semibold text-wine">Ana Mônica da Costa</h2>
-              <p class="text-gray-600">Team Leader</p>
               <a href="https://linkedin.com/in/gabrielbarbosa" class="text-blue-600 hover:text-blue-800 inline-flex items-center gap-1 mt-3" target="_blank">
                 <svg class="w-5 h-5 fill-current" viewBox="0 0 24 24"><path d="M4.98..."/></svg>
                 <span class="text-sm">LinkedIn</span>
@@ -135,7 +133,6 @@
             <div class="bg-white p-6 rounded-xl shadow text-center">
               <img src="images/members/gabriel.jpg" alt="Bernardo de Souza" class="w-32 h-32 mx-auto mb-4 rounded-full object-cover border-4 border-wine" />
               <h2 class="text-xl font-semibold text-wine">Bernardo de Souza</h2>
-              <p class="text-gray-600">Team Leader</p>
               <a href="https://linkedin.com/in/gabrielbarbosa" class="text-blue-600 hover:text-blue-800 inline-flex items-center gap-1 mt-3" target="_blank">
                 <svg class="w-5 h-5 fill-current" viewBox="0 0 24 24"><path d="M4.98..."/></svg>
                 <span class="text-sm">LinkedIn</span>
@@ -153,7 +150,7 @@
             <div class="bg-white p-6 rounded-xl shadow text-center">
               <img src="images/team/dhomini.jpg" alt="Dhomini Picanço" class="w-32 h-32 mx-auto mb-4 rounded-full object-cover border-4 border-wine" />
               <h2 class="text-xl font-semibold text-wine">Dhomini Picanço</h2>
-              <p class="text-gray-600">Team Leader</p>
+              <p class="text-gray-600">Lider de Programação</p>
               <a href="https://linkedin.com/in/dhomini" class="text-blue-600 hover:text-blue-800 inline-flex items-center gap-1 mt-3" target="_blank">
                 <svg class="w-5 h-5 fill-current" viewBox="0 0 24 24"><path d="M4.98..."/></svg>
                 <span class="text-sm">LinkedIn</span>
@@ -163,7 +160,6 @@
             <div class="bg-white p-6 rounded-xl shadow text-center">
               <img src="images/team/eduardo.jpeg" alt="Eduardo da Silva" class="w-32 h-32 mx-auto mb-4 rounded-full object-cover border-4 border-wine" />
               <h2 class="text-xl font-semibold text-wine">Eduardo da Silva</h2>
-              <p class="text-gray-600">Team Leader</p>
               <a href="https://linkedin.com/in/dhomini" class="text-blue-600 hover:text-blue-800 inline-flex items-center gap-1 mt-3" target="_blank">
                 <svg class="w-5 h-5 fill-current" viewBox="0 0 24 24"><path d="M4.98..."/></svg>
                 <span class="text-sm">LinkedIn</span>
@@ -173,7 +169,6 @@
             <div class="bg-white p-6 rounded-xl shadow text-center">
               <img src="images/team/marcos.gif" alt="Marcos Corrêa" class="w-32 h-32 mx-auto mb-4 rounded-full object-cover border-4 border-wine" />
               <h2 class="text-xl font-semibold text-wine">Marcos Vinícus Corrêa</h2>
-              <p class="text-gray-600">Team Leader</p>
               <a href="https://linkedin.com/in/dhomini" class="text-blue-600 hover:text-blue-800 inline-flex items-center gap-1 mt-3" target="_blank">
                 <svg class="w-5 h-5 fill-current" viewBox="0 0 24 24"><path d="M4.98..."/></svg>
                 <span class="text-sm">LinkedIn</span>
@@ -183,7 +178,6 @@
             <div class="bg-white p-6 rounded-xl shadow text-center">
               <img src="images/team/jaisson.png" alt="Jaisson Penante" class="w-32 h-32 mx-auto mb-4 rounded-full object-cover border-4 border-wine" />
               <h2 class="text-xl font-semibold text-wine">Jaisson Penante</h2>
-              <p class="text-gray-600">Team Leader</p>
               <a href="https://linkedin.com/in/dhomini" class="text-blue-600 hover:text-blue-800 inline-flex items-center gap-1 mt-3" target="_blank">
                 <svg class="w-5 h-5 fill-current" viewBox="0 0 24 24"><path d="M4.98..."/></svg>
                 <span class="text-sm">LinkedIn</span>
